2023-02-22  G. Branden Robinson <g.branden.robinson@gmail.com>

	[tests]: Prevent failures when $GROFF_ENCODING is set.

	* src/roff/groff/tests/ab_works.sh:
	* src/roff/groff/tests/handle_special_input_code_points.sh:
	* src/roff/groff/tests/initialization_is_quiet.sh:
	* src/roff/groff/tests/msoquiet_works.sh:
	* src/roff/groff/tests/soquiet_works.sh:
	* tmac/tests/an-ext_MR-works.sh:
	* tmac/tests/an_MR-works.sh:
	* tmac/tests/an_font-remapping-does-not-affect-titles.sh: Unset
	$GROFF_ENCODING before running test because preconv(1) confounds
	these tests.

	Thanks to Alexis for reporting this problem.

2023-02-21  G. Branden Robinson <g.branden.robinson@gmail.com>

	[ms]: Rename test.

	* tmac/tests/s_no-excess-space-around-displays.tmac: Rename...
	* tmac/tests/s_no-excess-space-around-displays.sh: ...to this.
	* tmac/tmac.am (tmac_TESTS): Update.

2023-02-21  G. Branden Robinson <g.branden.robinson@gmail.com>

	[gropdf]: Revise tests to run unconditionally, rather than
	configuring them away at build time, which can cause a
	distribution archive to be incorrectly structured.  Update
	configuration notices when optional dependencies are absent.

	* font/devpdf/devpdf.am (font_devpdf_TESTS): Remove `USE_GROPDF`
	and `HAVE_URW_FONTS` conditionals.
	* m4/groff.m4 (GROFF_GROPDF_PROGRAM_NOTICE):
	(GROFF_URW_FONTS_NOTICE): Warn reader that a gropdf test failure
	is to be expected.

	Fixes <https://savannah.gnu.org/bugs/?63824> (2/2).

2023-02-21  G. Branden Robinson <g.branden.robinson@gmail.com>

	[grohtml]: Revise tests to check for requisite programs at test
	time and skip if not found, rather than configuring them away at
	build time, which can cause a distribution archive to be
	incorrectly structured.

	* m4/groff.m4: Annotate requisite program list since we're
	violating the DRY principle.
	* src/roff/groff/groff.am (groff_TESTS): Populate
	unconditionally.

	* src/roff/groff/tests/html_works_with_grn_and_eqn.sh: