@@ -31,16 +31,16 @@ unset GROFF_ENCODING
 for d in ascii cp1047 dvi html latin1 lbp lj4 pdf ps utf8
 do
   echo "verifying exit status of .ab request using $d device" >&2
-  printf '.ab\n' | "$groff" -T$d
+  printf '.ab\n' | "$groff" -Z -T$d
   test $? -eq 1 || exit 1
 done
 
 echo "verifying empty output of .ab request with no arguments" >&2
-OUT=$(printf '.ab\n' | "$groff" -Tascii 2>&1)
+OUT=$(printf '.ab\n' | "$groff" -Z -Tascii 2>&1)
 test "$OUT" = "" || exit 1
 
 echo "verifying that arguments to .ab request go to stderr" >&2
-OUT=$(printf '.ab foo\n' | "$groff" -Tascii 2>&1 > /dev/null)
+OUT=$(printf '.ab foo\n' | "$groff" -Z -Tascii 2>&1 > /dev/null)
 test "$OUT" = "foo" || exit 1
 
 # vim:set autoindent expandtab shiftwidth=2 tabstop=2 textwidth=72:
