@@ -28,6 +28,7 @@ unset GROFF_ENCODING
 DOC='.msoquiet nonexistent'
 
 OUTPUT=$(echo "$DOC" | "$groff" -Tascii 2>&1)
+echo "$OUTPUT"
 
 echo "testing that .msoquiet of nonexistent file produces no warning" \
   >&2
